--- a/src/main/resources/static/map.html
+++ b/src/main/resources/static/map.html
@@ -18,23 +18,33 @@
     </style>
 </head>
 <body>
-
 <div id="map"></div>
+<!--<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>  || Original -->
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+        crossorigin=""></script>
+<script src="route.js"></script>
 
-<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+
 <script>
     // TODO Make this flexible when new Tour is added
-    const map = L.map('map').setView([48.20703880023519, 15.238992724563282], 13);
+    const map = L.map('map')
+    const route = directions;
+    const bbox = route.bbox;
+
+    // ==> JavaFX WebView only loads loacal files BUT at runtime Maven copies the files to target/classes/static
+    map.fitBounds([
+        [bbox[1], bbox[0]],
+        [bbox[3], bbox[2]]
+    ]);
 
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '© OpenStreetMap contributors'
+        attribution: '2024 © FH Technikum Wien'
     }).addTo(map);
 
-    const matzleinsdorf = [48.203463608089926, 15.275642431767542];
-    const poechlarn = [48.21041355268731, 15.213586843747837];
+    L.geoJSON(route).addTo(map);
 
-    L.marker(matzleinsdorf).addTo(map).bindPopup("Matzleinsdorf bei Melk");
-    L.marker(poechlarn).addTo(map).bindPopup("Pöchlarn");
+
 </script>
 
 </body>
