feat: Added OpenRouteService (RouteService) + calculating Duration and Distance + refactored architecture

--- a/src/main/resources/static/map.html
+++ b/src/main/resources/static/map.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 
     <style>
-        html, body/*, #map*/ {
+        html, body {
             height: 100%;
-            /*width: 100%;*/
             margin: 0;
             padding: 0;
         }
@@ -18,48 +17,46 @@
             height: 100%;
             width: 100%;
         }
-        body {
-            margin: 0;
-        }
     </style>
 </head>
 <body>
 
 <div id="map"></div>
-<!--<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>  || Original -->
-
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
         crossorigin="">
 </script>
 
-<script src="route.js"></script>
-
-
 <script>
-    // TODO Make this flexible when new Tour is added
+    // Dynamisches Nachladen von route.js mit Timestamp (Cache-Busting)
+    const script = document.createElement("script");
+    script.src = "route.js?v=" + new Date().getTime();
+    script.onload = () => {
+        const map = L.map('map');
+        const route = directions;
+        const bbox = route.bbox;
 
+        map.fitBounds([
+            [bbox[1], bbox[0]],
+            [bbox[3], bbox[2]]
+        ]);
 
-    const map = L.map('map')
-    const route = directions;
-    const bbox = route.bbox;
+        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            maxZoom: 19,
+            attribution: '2024 © FH Technikum Wien'
+        }).addTo(map);
 
-    // ==> JavaFX WebView only loads loacal files BUT at runtime Maven copies the files to target/classes/static
+        L.geoJSON(route).addTo(map);
 
-    map.fitBounds([
-        [bbox[1], bbox[0]],
-        [bbox[3], bbox[2]]
-    ]);
+        setTimeout(() => map.invalidateSize(), 500);
+    };
 
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        maxZoom:19,
-        attribution: '2024 © FH Technikum Wien'
-    }).addTo(map);
+    script.onerror = () => {
+        console.error("Fehler beim Laden von route.js");
+    };
 
-    L.geoJSON(route).addTo(map);
-
-    setTimeout(()=> map.invalidateSize(),500);
+    document.body.appendChild(script);
 </script>
 
 </body>
